--- a/1.html
+++ b/1.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <center>
-      <h1 style="text-align: center">Calculator</h1>
+      <h1>Calculator</h1>
       <div class="container">
         <div class="screen"><h3>Screen</h3></div>
         <div>
